Motto changes and license file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>RedPill | Alessandro Granito – Senior Full-Stack Web Developer</title>
-		<meta name="description" content="Alessandro Granito – Senior Full-Stack Web Developer specializing in code refactoring, system architecture, and scalable web solutions. Creator of RedPill: Null the Noise. Simplicity Scales. Return Real.">
+		<meta name="description" content="Alessandro Granito – Senior Full-Stack Web Developer specializing in code refactoring, system architecture, and scalable web solutions. Creator of RedPill: Null the Noise. Clean the Code. Return Real. Simplicity Scales.">
 		<meta name="keywords" content="RedPill, Alessandro Granito, Full-Stack Developer, Software Architect, Code Refactoring, Legacy Modernization, PHP, Go, JavaScript, TypeScript, Microservices, Kubernetes, Java, Scalability, Maintainability">
 		<meta name="author" content="Alessandro Granito">
 
